# pandas_col

./: README.md  pandas_col.py  pyproject.toml  t.py
